Fix contact box width and align

--- a/week-02/day-02/form/style.css
+++ b/week-02/day-02/form/style.css
@@ -16,6 +16,7 @@ h2, .form-container, .intro-upload-buttons  {
 .form-container {
   display: flex;
   height: 100%;
+  justify-content: space-between;
 }
 
 h2 {
@@ -30,10 +31,6 @@ h2 {
   padding: 10px;
   box-sizing: border-box;
   border-radius: 3px;
-}
-
-.personal-info-box, .contact-data-box  {
-  width: 50%;
 }
 
 label {
